--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,7 +1,20 @@
-@import './fonts.scss';
-@import './components/app-popup.scss';
-@import './components/app-form.scss';
+@font-face {
+    font-family: 'Roboto Regular';
+    src: url('../fonts/Roboto-Regular.ttf');
+    font-weight: 400;
+}
 
+@font-face {
+    font-family: 'Roboto Medium';
+    src: url('../fonts/Roboto-Medium.ttf');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Roboto Bold';
+    src: url('../fonts/Roboto-Bold.ttf');
+    font-weight: 700;
+}
 
 * {
     margin: 0;
@@ -39,6 +52,107 @@ nav a {
     justify-content: center;
     align-items: flex-start;
     padding-block: 40px 0;
+}
+
+#main-form {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+
+    h2 {
+        color: white;
+    }
+
+    .label-text {
+        color: white;
+        display: inline-block;
+        margin-bottom: 10px;
+        font-size: 14px;
+    }
+
+    .card-text-input {
+        width: 90%;
+        position: relative;
+        .error-message {
+            position: absolute;
+            bottom: -30px;
+            left: 0;
+        }
+    }
+
+    textarea {
+        width: 100%;
+        height: 120px;
+        transition: 0.3s ease;
+        border: 2px solid #121212;
+        border-radius: 10px;
+        padding: 10px;
+        &::placeholder {
+            color: #121212;
+            opacity: 0.5;
+        }
+        &:focus {
+            outline: 2px solid #9d539b;
+            border: none;
+        }
+    }
+
+    input[type=submit] {
+        width: 90%;
+        height: 50px;
+        border-radius: 10px;
+        text-transform: uppercase;
+        background-color: #9d539b;
+        border: none;
+        color: white;
+    }
+
+    .disabled {
+        background-color: gainsboro!important;
+        opacity: 0.6;
+        color: #121212!important;
+    }
+
+    .error-message {
+        font-size: 12px;
+        color: #a63164;
+    }
+}
+
+#app-popup {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #7c75c5;
+        opacity: 0.8;
+    }
+
+    .popup-content {
+        height: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .app-close-icon {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+    }
 }
 
 
