--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,7 +23,7 @@
 
 body {
     min-height: 100vh;
-    overflow: hidden;
+    // overflow: hidden;
     background: #FCFCFD;
     font-family: 'Roboto Regular';
 }
@@ -106,9 +106,9 @@ nav a {
         height: 50px;
         border-radius: 10px;
         text-transform: uppercase;
-        background-color: #9d539b;
+        background-color: white;
         border: none;
-        color: white;
+        color: #121212;
     }
 
     .disabled {
@@ -119,7 +119,7 @@ nav a {
 
     .error-message {
         font-size: 12px;
-        color: #a63164;
+        color: #121212;
     }
 }
 
@@ -129,6 +129,10 @@ nav a {
     height: 100vh;
     top: 0;
     left: 0;
+    z-index: 1;
+    opacity: 0;
+    transform: scale(0);
+    animation: popup-open 0.3s ease forwards;
     
     .overlay {
         position: absolute;
@@ -136,7 +140,7 @@ nav a {
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #7c75c5;
+        background-color: #9d539b;
         opacity: 0.8;
     }
 
@@ -155,4 +159,140 @@ nav a {
     }
 }
 
+@keyframes popup-open {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
 
+#app-alert {
+    position: absolute;
+    z-index: 100;
+    width: 370px;
+    top: 20px;
+    left: 50%;
+    padding-inline: 20px;
+    transform: translate(-50%, -10px);
+    border-radius: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 60px;
+    opacity: 0;
+    animation: alert-fade-in 0.5s ease forwards;
+    transition: 0.5s;
+    svg:first-of-type {
+        transform: scale(2);
+        margin-right: 20px;
+    }
+    p {
+        flex-grow: 1;
+    }
+}
+
+.success-alert {
+    background-color: #59E2B6;
+}
+
+.error-alert {
+    background-color: #a63164;
+    color: white;
+}
+
+@keyframes alert-fade-in {
+    from {
+        opacity: 0;
+        transform: translate(-50%, -10px);
+    }
+    to {
+        opacity: 1;
+        transform: translate(-50%, 0);
+    }
+}
+
+.app-button {
+    background-color: #7c75c5;
+    border: none;
+    color: white;
+}
+
+.app-button-small {
+    padding: 5px;
+}
+.app-button-normal {
+    padding: 10px;
+}
+.app-button-big {
+    padding: 20px;
+    svg {
+        transform: scale(1.8);
+    }
+}
+.app-button-rounded {
+    border-radius: 100%;
+}
+.app-button-rectangular {
+    border-radius: 10px;
+}
+
+.add-card-btn {
+    position: fixed;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 0;
+}
+
+.settings-page__card-list {
+    width: 100%;
+    height: fit-content;
+    padding-block: 30px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    overflow: scroll;
+    gap: 20px;
+}
+
+.app-card {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border: 1px solid #30c4d3;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+    overflow: hidden;
+
+    &__text {
+        text-align: center;
+    }
+    &__actions-container {
+        position: absolute;
+        height: 40px;
+        width: 100%;
+        background-color: #30c4d3;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    textarea {
+        width: 100%;
+        height: 80px;
+        justify-self: start;
+        border-radius: 10px;
+        padding: 5px;
+    }
+}
